<?xml version="1.0" encoding="utf-8"?>
<!--
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
 >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/sDec" />
    
    <EditText
        android:id="@+id/txtDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:clickable="false"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true" />

    <Button
        android:id="@+id/btnGo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtDec"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtDec"
        android:text="@string/sPushBtn" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGo1"
        android:layout_below="@+id/btnGo1"
        android:text="@string/sBi" />

    <TextView
        android:id="@+id/lblResultBi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/TextView01"
        android:textIsSelectable="false"
        android:textSize="@dimen/lblResult" />

    <TextSwitcher
        android:id="@+id/textSwitcher1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblResultBi" >

    </TextSwitcher>

    <Button
        android:id="@+id/btnGo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtStr"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtStr"
        android:text="@string/sPushBtn" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnGo2"
        android:layout_below="@+id/btnGo2"
        android:text="@string/sModifyStr" />

    <TextView
        android:id="@+id/lblResultStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView3"
        android:textSize="@dimen/lblResult"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/sEnterText" />

    <EditText
        android:id="@+id/txtStr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" />

</RelativeLayout>